[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,53 @@
 <html>
+    <head>
+        <title>
+            Article one | Mandira Adak 
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr/>
+        <div>
+            August 23rd,2017
+        </div>
+        <div>
+            <p>
+                This is my first html code.
+                This is my first html code.
+                This is my first html code.
+                This is my first html code.
+                This is my first html code.
+                This is my first html code.
+                This is my first html code.
+                This is my first html code.
+                This is my first html code.
+                This is my first html code.
+            </p>
+               <p>
+                This is my first html code.
+                This is my first html code.
+                This is my first html code.
+                This is my first html code.
+                This is my first html code.
+                This is my first html code.
+                This is my first html code.
+                This is my first html code.
+                This is my first html code.
+                This is my first html code.
+            </p>   <p>
+                This is my first html code.
+                This is my first html code.
+                This is my first html code.
+                This is my first html code.
+                This is my first html code.
+                This is my first html code.
+                This is my first html code.
+                This is my first html code.
+                This is my first html code.
+                This is my first html code.
+            </p>
+        </div>
+    </body>
 </html>
