--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -10,7 +10,7 @@
             <a href="/">Home</a>
         </div>
         <hr/>
-        <h3>article one0</h3>
+        <h3>Article One</h3>
         <div>
             August 23rd,2017
         </div>
