--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,2 +1,24 @@
 <html>
+    <head>
+        <title>
+            Article one | Mandira Adak 
+        </title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+    </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr/>
+        <h3>Article Two</h3>
+        <div>
+            August 23rd,2017
+        </div>
+        <div>
+            <p>
+                This is my second html code.
+            
+            </p>
+        </div>
+    </body>
 </html>
