--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            Article one | Mandira Adak 
+            Article Two | Mandira Adak 
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
