--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,8 +4,18 @@
             Article one | Mandira Adak 
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <style>
+            .container{
+                max-width : 800px;
+                margin : 0 auto;
+                color : grey;
+                font-family : sans-serif;
+            }
+        </style>
     </head>
+    
     <body>
+        <div class="container">
         <div>
             <a href="/">Home</a>
         </div>
@@ -50,6 +60,7 @@
                 This is my first html code.
                 This is my first html code.
             </p>
+        </div>
         </div>
     </body>
 </html>
