[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -3,9 +3,21 @@
         <title>
             Article Three | Mandira Adak 
         </title>
+         <style>
+            .container{
+                   max-width: 800px;
+    margin: 0 auto;
+    color: #846b6b;
+    font-family: sans-serif;
+    padding-top: 70px;
+    padding-left: 20px;
+    padding-right: 20px;
+
+        </style>
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
+        <div class="container">
         <div>
             <a href="/">Home</a>
         </div>
@@ -19,6 +31,7 @@
                 This is my third html code.
             
             </p>
+        </div>
         </div>
     </body>
 </html>
