--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -4,8 +4,21 @@
             Article Two | Mandira Adak 
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+   <style>
+            .container{
+                   max-width: 800px;
+    margin: 0 auto;
+    color: #846b6b;
+    font-family: sans-serif;
+    padding-top: 70px;
+    padding-left: 20px;
+    padding-right: 20px;
+
+        </style>
+
     </head>
     <body>
+        <div class="container">
         <div>
             <a href="/">Home</a>
         </div>
@@ -19,6 +32,7 @@
                 This is my second html code.
             
             </p>
+            </div>
         </div>
     </body>
 </html>
