--- a/ui/index.html
+++ b/ui/index.html
@@ -26,6 +26,7 @@
                 <li>Name3</li>
             </ul>
         </div>
+        </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
