--- a/ui/index.html
+++ b/ui/index.html
@@ -19,7 +19,7 @@
                     This button <button id="counter">Clickme!</button> has been clicked <span id="count">0</span> times.
                     <br/>
                     <input type="text" id="name" placeholder="name">
-                    <input type="submit" value="Submit">
+                    <input type="submit" value="Submit" id="submit_btn">
                     <ul>
                         <li>Name1</li>
                         <li>Name2</li>
