--- a/ui/index.html
+++ b/ui/index.html
@@ -20,10 +20,7 @@
                     <br/>
                     <input type="text" id="name" placeholder="name">
                     <input type="submit" value="Submit" id="submit_btn">
-                    <ul>
-                        <li>Name1</li>
-                        <li>Name2</li>
-                        <li>Name3</li>
+                    <ul id="namelist">
                     </ul>
                 </div>
         </div>
